# deezer-tui

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  go.mod  go.sum
.github/workflows/: ci.yml  project-columns.yml
cmd/deezer-tui/: main.go
go/: README.md  go.mod  go.sum
go/cmd/deezer-tui/: main.go
go/internal/app/: state.go  state_test.go
go/internal/config/: config.go
go/internal/deezer/: client.go  client_test.go  crypto.go  crypto_test.go
go/internal/player/: beep_backend.go  pipeline.go  pipeline_test.go  process_backend_darwin.go
go/internal/tui/: artwork.go  loader.go  mac_player_helper.swift  model.go  model_test.go  playback.go  playback_darwin.go  playback_other.go
internal/app/: state.go  state_test.go
internal/colorscheme/: colorscheme.go  colorscheme_test.go
internal/config/: config.go  config_test.go
internal/deezer/: client.go  client_test.go  crypto_test.go
internal/player/: beep_backend.go  beep_backend_test.go  pipeline.go  pipeline_test.go  process_backend_darwin.go  process_backend_other.go  stream_buffer.go  stream_buffer_test.go  visualizer.go  visualizer_test.go
internal/tui/: artwork.go  loader.go  mac_player_helper.swift  model.go  model_test.go  playback.go  playback_darwin.go  playback_darwin_test.go  playback_other.go
src/: api.rs  app.rs  cdn.rs  config.rs  crypto.rs  discord_rpc.rs  main.rs  mpris.rs  player.rs  ui.rs
src/app/: tests.rs
