[package]
name = "deezer-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
anyhow = "1.0"
blowfish = "0.9"
cbc = "0.1"
crossbeam-channel = "0.5"
crossterm = "0.28"
dirs = "6.0"
hex = "0.4"
md5 = "0.7"
ratatui = { version = "=0.26.3", default-features = false, features = ["crossterm"] }
reqwest = { version = "=0.11.27", default-features = false, features = ["cookies", "json", "rustls-tls"] }
rodio = { version = "0.20", features = ["symphonia", "symphonia-mp3", "symphonia-flac", "crossbeam-channel"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
symphonia = { version = "0.5", default-features = false, features = ["flac", "mp3", "pcm"] }
tokio = { version = "1.0", features = ["full"] }
tui-input = { version = "=0.15.0", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false
